[gd_scene load_steps=24 format=3 uid="uid://cpm21puw0r0jw"]

[ext_resource type="Texture2D" uid="uid://dlc2ft5387eaw" path="res://UI/crosshair_unlock.png" id="1"]
[ext_resource type="Script" path="res://movables/dragon/DragonManager.gd" id="6"]
[ext_resource type="Script" path="res://movables/dragon/old/LaserEmitter.gd" id="7"]
[ext_resource type="Script" path="res://UI/CameraRef.gd" id="8"]
[ext_resource type="Texture2D" uid="uid://dahv3t8b7l00h" path="res://environment/skybox.jpg" id="10"]
[ext_resource type="Script" path="res://levels/Level.gd" id="14"]
[ext_resource type="Script" path="res://UI/LockLines.gd" id="15"]
[ext_resource type="Script" path="res://UI/AreaCursor.gd" id="16"]
[ext_resource type="PackedScene" uid="uid://blp7gxlnl6oe7" path="res://movables/dragon/dragon_01.tscn" id="17"]
[ext_resource type="PackedScene" path="res://movables/dragon/old/Laser.tscn" id="22"]
[ext_resource type="PackedScene" uid="uid://6db67jxe626n" path="res://environment/lvl01.tscn" id="26"]
[ext_resource type="Script" path="res://Metronome.gd" id="29"]
[ext_resource type="PackedScene" uid="uid://cfp465y3pgcel" path="res://movables/enemies/geocyte01/Geocyte_01.tscn" id="30"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_qk363"]
panorama = ExtResource("10")

[sub_resource type="Sky" id="Sky_c3f05"]
sky_material = SubResource("PanoramaSkyMaterial_qk363")

[sub_resource type="Environment" id="42"]
background_mode = 2
sky = SubResource("Sky_c3f05")
ambient_light_color = Color(0.34902, 0.396078, 0.615686, 0.960784)
ambient_light_sky_contribution = 0.5
tonemap_mode = 2
fog_enabled = true
fog_light_color = Color(0.32549, 0.317647, 0.607843, 1)
adjustment_enabled = true
adjustment_contrast = 1.7
adjustment_saturation = 0.7

[sub_resource type="Animation" id="3"]
resource_name = "fly"
length = 1.66667

[sub_resource type="Animation" id="4"]
length = 1.66667

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nn5ur"]
_data = {
"fly": SubResource("3"),
"fly-loop": SubResource("4")
}

[sub_resource type="SphereShape3D" id="56"]
margin = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iu2ru"]
albedo_texture = ExtResource("1")

[sub_resource type="QuadMesh" id="18"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jorlm"]

[node name="Level" type="Node3D"]
script = ExtResource("14")

[node name="Metronome" type="Timer" parent="."]
script = ExtResource("29")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("42")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.571959, -0.794327, -0.204713, -0.595133, -0.573589, 0.562861, -0.564517, -0.200102, -0.800799, 0, 13.649, 0)
light_color = Color(1, 0.9055, 0.73, 1)
light_indirect_energy = 0.0
light_bake_mode = 0
shadow_enabled = true
directional_shadow_blend_splits = true

[node name="Geocytes" type="Node3D" parent="."]
transform = Transform3D(0.0885231, 0, 0.260531, 0, 0.275159, 0, -0.260531, 0, 0.0885231, 37.4422, 84.6189, 25.1686)

[node name="Geocyte01" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 678.211, 88.0599, 142.396)

[node name="Geocyte02" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 651.576, 88.0599, -231.183)

[node name="Geocyte03" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 738.548, 22.1235, -349.829)

[node name="Geocyte07" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 805.22, 61.7463, -272.051)

[node name="Geocyte08" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 805.774, 201.829, -729.85)
health = 8

[node name="Geocyte09" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 812.887, 173.547, -708.914)
health = 8

[node name="Geocyte10" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 796.307, 149.672, -757.709)
health = 8

[node name="Geocyte11" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 832.225, 230.479, -743.519)
health = 8

[node name="Geocyte12" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 854.454, 181.656, -692.023)
health = 8

[node name="Geocyte13" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 813.611, 181.656, -791.083)
health = 8

[node name="Geocyte04" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 520.41, 22.1235, -1612.4)

[node name="Geocyte05" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 312.248, 78.5684, -1582.27)

[node name="Geocyte06" parent="Geocytes" instance=ExtResource("30")]
transform = Transform3D(1, 0, 1.49012e-07, 0, 1, 0, -1.49012e-07, 0, 1, 104.098, 240.57, -1969.25)

[node name="lvl01" parent="." instance=ExtResource("26")]
transform = Transform3D(-0.249552, 0, -0.968361, 0, 1, 0, 0.968361, 0, -0.249552, 19.7959, 75.4531, -332.748)

[node name="DragonManager" type="Node3D" parent="."]
script = ExtResource("6")

[node name="dragon_flattened" parent="DragonManager" instance=ExtResource("17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 142.803, 114.836, -58.728)
min_flight_speed = 5
turn_speed = 2.0
pitch_speed = 2.0
target_speed = 9

[node name="AnimationPlayer" parent="DragonManager/dragon_flattened" index="1"]
libraries = {
"": SubResource("AnimationLibrary_nn5ur")
}

[node name="Armature" parent="DragonManager/dragon_flattened" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="RayCastGround" parent="DragonManager/dragon_flattened" index="4"]
collision_mask = 3

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="DragonManager/dragon_flattened"]
remote_path = NodePath("../CameraPivot/CameraRef")
use_global_coordinates = false
update_position = false
update_rotation = false
update_scale = false

[node name="LaserEmitter" type="Node3D" parent="DragonManager/dragon_flattened"]
script = ExtResource("7")
Laser = ExtResource("22")
parent = NodePath("..")

[node name="CameraPivot" type="Node3D" parent="DragonManager/dragon_flattened"]

[node name="CameraRef" type="SpringArm3D" parent="DragonManager/dragon_flattened/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.766044, 0.642787, 0, -0.642787, 0.766044, 0, 0, 0)
collision_mask = 3
shape = SubResource("56")
spring_length = 20.0
script = ExtResource("8")

[node name="Camera3D" type="Camera3D" parent="DragonManager/dragon_flattened/CameraPivot/CameraRef"]
transform = Transform3D(1, 0, 0, 0, 0.939693, -0.34202, 0, 0.34202, 0.939693, 0, 0, 0)
far = 500.0

[node name="Reticle" type="Node3D" parent="DragonManager/dragon_flattened/CameraPivot/CameraRef/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, -2.68221e-07, 0, 2.98023e-07, 1, 0, 0, 0)
script = ExtResource("16")

[node name="MeshInstance3D" type="MeshInstance3D" parent="DragonManager/dragon_flattened/CameraPivot/CameraRef/Camera3D/Reticle"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.5, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_iu2ru")
cast_shadow = 0
mesh = SubResource("18")
surface_material_override/0 = SubResource("StandardMaterial3D_jorlm")

[node name="LockLines" type="Node3D" parent="."]
script = ExtResource("15")

[connection signal="timeout" from="Metronome" to="Metronome" method="_on_Metronome_timeout"]
[connection signal="enemies_locked" from="DragonManager/dragon_flattened/CameraPivot/CameraRef/Camera3D/Reticle" to="LockLines" method="add_lines"]
[connection signal="setZoom" from="LockLines" to="DragonManager/dragon_flattened/CameraPivot/CameraRef" method="animate_length"]

[editable path="DragonManager/dragon_flattened"]
